// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardCarouselControls /> renders with disabled next control when scrolled to end 1`] = `
<div
  className="pgn__card-carousel-controls"
>
  <div
    className="pgn__hstack pgn__stack-gap--1"
  >
    <button
      aria-label="Scroll to previous"
      className="btn-icon btn-icon-primary btn-icon-md"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="btn-icon__icon-container"
      >
        <span
          className="pgn__icon btn-icon__icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </span>
    </button>
    <button
      aria-label="Scroll to next"
      className="btn-icon btn-icon-primary btn-icon-md"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="btn-icon__icon-container"
      >
        <span
          className="pgn__icon btn-icon__icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<CardCarouselControls /> renders with disabled previous control when scrolled to start 1`] = `
<div
  className="pgn__card-carousel-controls"
>
  <div
    className="pgn__hstack pgn__stack-gap--1"
  >
    <button
      aria-label="Scroll to previous"
      className="btn-icon btn-icon-primary btn-icon-md"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="btn-icon__icon-container"
      >
        <span
          className="pgn__icon btn-icon__icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </span>
    </button>
    <button
      aria-label="Scroll to next"
      className="btn-icon btn-icon-primary btn-icon-md"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="btn-icon__icon-container"
      >
        <span
          className="pgn__icon btn-icon__icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<CardCarouselControls /> renders with enabled controls when not scrolled to start/end 1`] = `
<div
  className="pgn__card-carousel-controls"
>
  <div
    className="pgn__hstack pgn__stack-gap--1"
  >
    <button
      aria-label="Scroll to previous"
      className="btn-icon btn-icon-primary btn-icon-md"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="btn-icon__icon-container"
      >
        <span
          className="pgn__icon btn-icon__icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </span>
    </button>
    <button
      aria-label="Scroll to next"
      className="btn-icon btn-icon-primary btn-icon-md"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="btn-icon__icon-container"
      >
        <span
          className="pgn__icon btn-icon__icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<CardCarouselControls /> renders without controls when both previous/next controls would be disabled 1`] = `null`;
